src/objects/cnotify__TwilioConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Twilio App Config</description>
    <fields>
        <fullName>cnotify__AccountSid__c</fullName>
        <label>AccountSid</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnotify__ApplicationSid__c</fullName>
        <label>ApplicationSid</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnotify__AuthToken__c</fullName>
        <label>AuthToken</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnotify__CallerId__c</fullName>
        <label>Short Code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnotify__Use_Short_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if your company owns a short code and would like to use that number to send text messages. Enter the short code in the &apos;Short Code&apos; field.</inlineHelpText>
        <label>Use Short Code</label>
        <type>Checkbox</type>
    </fields>
    <label>Twilio Config</label>
</CustomObject>